# WeaveCastStudio

./: .env.sample  .gitignore  README.md  README_ja.md  check_env.py  content_index.md  content_index.py  main.py  pull_from_gcs.ps1  pull_from_gcs.py  pyproject.toml  run_tests.ps1  verify_index.py
.github/workflows/: ci.yml
IaC/: .gitignore  README.md  main.tf  startup.sh  terraform.tfvars.example  variables.tf
compe_M1/: M1_REFACTOR_DESIGN.md  README.md  README_ja.md  main.py  requirements.txt
compe_M1/agents/: image_generator.py  narrator.py  script_writer.py  source_collector.py  summarizer.py  video_composer.py
compe_M1/config/: topics.yaml
compe_M1/files/: content_index.py  image_generator.py  main.py  narrator.py  script_writer.py  source_collector.py  summarizer.py  topics.yaml  video_composer.py
compe_M1/tools/: check_prompts.py  (+1 more)
compe_M3/: PHASE1_SETUP.md  README.md  README_ja.md  drission_crawler.py  main.py  requirements_m3.txt  shared  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
compe_M4/: 260309-D-D0477-2444R.avif  DVIDS - Search.url  OBS_SETUP.md  OBS_SETUP_ja.md  README.md  README_ja.md  breaking_news_server.py  demo_setup.py  gemini_live_client.py  main.py  media_window.py  test_gemini.py  test_media_playback.py  test_trump_monitor.py  test_vlc.py  vlc_player.py
gcp/: README.md  README_ja.md  sync_to_gcs.sh
shared/: __init__.py  image_generator.py  language_utils.py  narrator.py  script_writer.py  source_collector.py  summarizer.py  video_composer.py
tests/: test_smoke.py
tools/: clean.ps1  clean.sh  run_tests.sh
(+74 files in other folders)
