[project]
name = "geminiliveagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "beautifulsoup4>=4.14.3",
    "drissionpage>=4.1.1.2",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-genai>=1.0.0",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0",
    "python-vlc>=3.0.21203",
    "pyyaml>=6.0.3",
]
